@@ -1,5 +1,5 @@
 
-			INSTALL for ivtools-1.1.0
+			INSTALL for ivtools-1.1.1
 
 Instructions for building ivtools-1.1 from source, the short version:
 
