@@ -1553,6 +1553,7 @@ ivtools-1.1/src/include/ivstd/stdio.h
 ivtools-1.1/src/include/ivstd/stdlib.h
 ivtools-1.1/src/include/ivstd/stream.h
 ivtools-1.1/src/include/ivstd/string.h
+ivtools-1.1/src/include/ivstd/strstream.h
 ivtools-1.1/src/include/ivstd/version.h
 ivtools-1.1/src/iueserv_/Imakefile
 ivtools-1.1/src/iueserv_/Makefile
